Optimization of the code